fix(install): remove obsolete Minecraft jar for modern loaders